scenarioo-client/app/styles/scenarioo.css
/* scenarioo-client
 * Copyright (C) 2014, scenarioo.org Development Team
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program.  If not, see <http://www.gnu.org/licenses/>.
 */

/** General **/
.link, .informationModal .nav-tabs {
}

.link-no-hover:hover {
    text-decoration: none;
}

h1, h2, h3, h4 {
    color: #4B4B4B;
    font-weight: normal;
}

h1 {
    font-size: 24px;
    margin: 0px 0px 20px;
}

h2 {
    font-size: 1.4em;
    border-bottom: 2px #CCCCCC solid;
    margin-top: 1em;
    margin-bottom: 0.5em;
    padding-bottom: 0.2em;
}

h3 {
    font-size: 16px;
    margin-top: 0.1em;
    margin-bottom: 0.1em;
}

h4 {
    font-size: 14px;
}


.icon-with-padding {
    padding-left: 5px;
    padding-right: 5px;
}

.hero-unit-hover:hover {
    background-color: #F8F8F8;
    border-radius: 6px 6px 6px 6px;
}

.controls div {
    display: inline;
    margin-bottom: 10px;
}

.inline-block {
    display: inline-block;
}

.btn-wide {
    width: 150px !important;
}

/** Breadcrumbs (basically styled by bootstrap!) **/

.breadcrumb {
    display: inline-block;
    margin-bottom: 0;
    padding: 0 0 0 5px;
}

.nav, .link {
    cursor: pointer;
}

/** Tables **/
/*
.table {
    border-width: 2px;
}
.table thead {
    background-color: whitesmoke;
    background-image: linear-gradient(to bottom, #FFFFFF, #E6E6E6);
}



.table tbody tr:nth-child(2n) td {
    background-color: 	#EEEEEE;
}

.table tbody tr:hover td {
    background-color: #EBF5FF;
}        */

.table-curved {
    border-collapse: separate;
}

.table-curved {
    border: solid #ccc 1px;
    border-radius: 6px;
    border-left: 0px;
}

.table-curved td, .table-curved th {
    border-left: 1px solid #ccc;
    border-top: 1px solid #ccc;
}

.table-curved th {
    border-top: none;
}

.table-curved th:first-child {
    border-radius: 6px 0 0 0;
}

.table-curved th:last-child {
    border-radius: 0 6px 0 0;
}

.table-curved th:only-child {
    border-radius: 6px 6px 0 0;
}

.table-curved tr:last-child td:first-child {
    border-radius: 0 0 0 6px;
}

.table-curved tr:last-child td:last-child {
    border-radius: 0 0 6px 0;
}

/** Navigation **/
@media screen and (max-width: 1024px) {
    .header .builds .state {
        display: none !important;
    }
}

.header .builds.dropdown .dropdown-menu {
    width: 500px;
}

.header .dropdown .dropdown-menu,
.header .dropdown .dropdown-menu li {
    width: 100%;
}

.header .buildLabel {
    padding-left: 20px;
}

/** Overview */
.builds-information {
    max-width: 800px;
}

.builds-information .accordion-heading {
    background-color: #E6E6E6;
}

.builds-information .accordion-heading a {
    color: #333333;
    border: thin solid #999999;
}

/** Step-View */
.step-navigation .btn {
    display: inline;
    margin-right: 10px;
}

.step-title {
    margin: 0px;
    padding: 0px;
}

.step-view {
    margin: 0 0 0 0;
    padding: 5px;
    border-radius: 3px;
}

.meta-data .label {
    padding-top: 6px;
    font-size: 16px;
}

.meta-data div.row-fluid div {
    line-height: 20px;
    padding: 0px 10px;
}

.meta-data .row-fluid {
    padding-bottom: 15px;
}

.meta-data dl {
    margin: 8px 0px;
}

.element-floating {
    display: block;
    float: left;
}

.sc-truncate {
    display: block;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
}

.sc-no-truncate {
    white-space: normal;
    overflow: auto;
    text-overflow: clip;
}

/** Screenshots */
div.sc-screenshot-border {
    border: 2px solid #DDDDDD;
}

img.sc-screenshot {
    max-width: 100%;
    width: auto;
}

div.sc-screenshot-scenario {
    height: 320px;
    overflow: hidden;
    margin: 10px 0 10px 0;
}

/** Configuration */
.configuration textarea {
    height: 150px;
}

/** Information */
.informationModal .github-link {
    padding-top: 20px;
    text-align: center;
}

.informationModal .github-link a {
    color: #5b5b5b !important;
}

.informationModal .github-link a:hover {
    color: #7b7b7b !important;
}

.ngusd-icon-ctrl {
    border: 1px solid #CCCCCC;
    border-radius: 4px 4px 4px 4px;
    display: inline-block;
    font-size: 10px;
    padding: 0px 3px;
    vertical-align: middle;
}

.ngusd-container {
    margin: 0 15px 15px 15px;
}

.ngusd-space-top {
    margin-top: 10px;
}

.ngusd-space-bottom {
    margin-bottom: 10px;
}

/** Overwrite Bootstrap styles **/
.table > thead > tr > th {
    vertical-align: top;
}

.tab-content {
    margin-top: 20px;
}

/** Tree **/
.sc-tree ul {
    margin-left: 0;
    padding-left: 0;
    padding-bottom: 2px;
}

.sc-tree li {
    margin: 2px 0 6px 0;
    padding-left: 8px;
    list-style-type:  none;
    border-left: #dddddd solid 1px;
}

.sc-node-label {
    font-weight: bold;
    color: #4B4B4B;
}

.sc-node-value {
    color: #428bca;
}


/** Modal Support with Bootstrap 3.0 - workaround according to http://stackoverflow.com/questions/18895271/angular-bootstrap-cant-get-modal-to-appear */

.modal {
    display: block;
    height: 0;
    overflow: visible;
}

.modal-body:before,
.modal-body:after {
    display: table;
    content: " ";
}

.modal-header:before,
.modal-header:after {
    display: table;
    content: " ";
}

/** Build Import Status Dialog (wider) **/
.modal-wide .modal-dialog {
    width: 75%;
}

